--- a/.env.example
+++ b/.env.example
@@ -1,39 +1,118 @@
-APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=
-APP_DEBUG=true
-APP_URL=http://localhost
+APP_NAME=Slym 
+APP_DESC="Soluções Web" 
+APP_ENV=local 
+APP_KEY=base64:RGpaF4hVPQgZlzJXlftjsxeGv3kLOmTsN/Yx9bajTiM= 
+APP_DEBUG=true 
+APP_URL==http://devaction.com.br  
+PATH_URL=http://devaction.com.br #URL Path do sistema 
 
-LOG_CHANNEL=stack
+LOG_CHANNEL=stack 
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_CONNECTION=mysql 
+DB_HOST=mysql380.umbler.com
+DB_PORT=41890 
+DB_DATABASE=slym_mario
+DB_USERNAME=slym_mario
+DB_PASSWORD=slym_mario*
 
-BROADCAST_DRIVER=log
-CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
-SESSION_LIFETIME=120
+BROADCAST_DRIVER=log 
+CACHE_DRIVER=file 
+QUEUE_CONNECTION=sync 
+SESSION_DRIVER=file 
+SESSION_LIFETIME=120 
 
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
+REDIS_HOST=127.0.0.1 
+REDIS_PASSWORD=null 
+REDIS_PORT=6379 
 
-MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_DRIVER=smtp 
+MAIL_HOST= 
+MAIL_PORT= 
+MAIL_USERNAME= 
+MAIL_PASSWORD= 
+MAIL_ENCRYPTION=tls 
+MAIL_NAME= 
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_APP_CLUSTER=mt1
+PUSHER_APP_ID= 
+PUSHER_APP_KEY= 
+PUSHER_APP_SECRET= 
+PUSHER_APP_CLUSTER=mt1 
 
-MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}" 
+MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}" 
+
+############## 
+
+#REPSONSAVEL TECNICO NFE/NFCE 
+
+RESP_CNPJ=34052830000184 
+RESP_NOME=Marcos 
+RESP_EMAIL=marcos_buenomello@hotmail.com 
+RESP_FONE=43996687145 
+AUTXML= 
+
+#MDFE 
+INSCRICAO_MUNICIPAL=11223 
+CODIGO_MUNICIPIO=4112009 
+
+
+############## 
+
+#VARIAVEIS DELIVERY 
+SMS_KEY= #KEY CONTELE API SMS 
+SMS_NOME_EMPRESA=LARAVEL_DELIVERY # NOME COM 
+PUSH_KEY=AIzaSyAAPZvGKFLPq_Wm0VRkjP4gQKITHdE-KS8 
+API_KEY_MAPS= 
+#KEY API GOOGLE MAPS, use este link para ajudar obter ** https://maplink.global/blog/como-obter-chave-api-google-maps/ 
+
+LATITUDE_PADRAO=-24.2544748 #alguma latitude de sua cidade 
+LONGITUDE_PADRAO=-49.7106296 #alguma longitude de sua cidade 
+ONE_SIGNAL_KEY= 
+ONE_SIGNAL_APP_ID= 
+COLOR_BUTTON=facebook #CORES facebook, primary, secondary * para delivery mercado 
+WHATSAPP_DELIVERY= 
+
+################# 
+
+#MODULOS DO SISTEMA: 1 - ativa, 0 - desativa 
+SERVIDOR_WEB=1 # Se o sistema estiver em localhost matenha 0 
+DEVOLUCAO_ALTERA_ESTOQUE=1 # Se ativado reduz o estoque em nota de devolução 
+ROTA_INICIAL=graficos # Rota de redirecionamento após o login no sistema 
+DELIVERY=0 # Ativa o módulo delivery lanchonete, pizzaria .. 
+DELIVERY_MERCADO=0 # Ativa o módulo delivery mercado * se ativado desativa o delivery lanchonete, pizzaria 
+QRCODE_MAPS=1 #Habilita o QrCode de leitura do entregador para ver a rota, tela de visaizacao do pedido 
+CIDADE_MAPS="Jaguariaiva" 
+PEDIDO_LOCAL=0 # Ativa o módulo de controle de mesas 
+
+PEDIDO_QRCODE=1 # Ativa módulo de pedido por QrCode 
+MESA_ATIVA_QRCODE=0 # se 1 ativa automatico a mesa para pedir, se 0 caixa deve confirmar mesa para pedir 
+CLIENTES_MESA_QRCODE=1 # Maximo de clientes que podem usar o pedido por qrcode simultaneo 
+TAMANHO_QRCODE=8 
+
+MDFE=1 # Ativa módulo MDF-e 
+CTE=1 # Ativa módulo CT-e 
+OS=1 # Ativa módulo Ordem de serviço 
+COTACAO=1 # Ativa módulo cotação 
+DIVISAO_VALOR_PIZZA=1 # se ativado divide o valor da pizza ao meio, se desativado mantém o valor da maior 
+AUTENTICACAO_SMS=1 # Autenticação de cliente de delivery por SMS 
+AUTENTICACAO_EMAIL=0 # Autenticação de cliente de delivery por Email 
+
+ALERTA_CONTAS_DIAS=5 # Alerta para contas a pagar e receber 
+
+################## 
+
+#VARIAVEIS DO PAGSEGURO * Crie uma conta do tipo vendedor para obter as credenciais 
+PAGSEGURO_ATIVO=1 
+PAGSEGURO_SANDBOX=0 
+PAGSEGURO_EMAIL=marcos_buenomello@hotmail.com 
+PAGSEGURO_TOKEN=b93e214a-dd2c-41a7-8cdf-988dbe30d5acd8e9ae1d49a79387e538d776e308da4df469-6592-4ae6-894b-820d8cb852b1 
+PAGSEGURO_NOTIFICATION= 
+CEP_PADRAO=84200000 
+CIDADE_PADRAO=JAGUARIAIVA 
+UF_PADRAO=PR 
+RUA_PADRAO="Aldo Ribas" 
+NUMERO_PADRAO="190 c" 
+BAIRRO_PADRAO="Remonta" 
+
+KEY_APP=laravel 
+PDV_VALOR_RECEBIDO=1 
