--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ APP_DESC="Soluções Web"
 APP_ENV=local 
 APP_KEY=base64:RGpaF4hVPQgZlzJXlftjsxeGv3kLOmTsN/Yx9bajTiM= 
 APP_DEBUG=true 
-APP_URL==http://devaction.com.br  
-PATH_URL=https://laravel-slym.herokuapp.com #URL Path do sistema 
+APP_URL=https://laravel-slym.herokuapp.com 
+PATH_URL=https://laravel-slym.herokuapp.com/ #URL Path do sistema 
 
 LOG_CHANNEL=stack 
 
