--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,6 @@
     "license": "MIT",
     "require": {
         "php": "^7.4",
-        "php": "soap",
         "barryvdh/laravel-cors": "0.11.4",
         "comtele/comtele_sdk": "^1.1.6",
         "dompdf/dompdf": "^0.8.3",
@@ -24,7 +23,8 @@
         "nfephp-org/sped-pos": "dev-master",
         "simplesoftwareio/simple-qrcode": "^2.0.0",
         "spatie/laravel-cors": "^1.3.3",
-        "werneckbh/laravel-qr-code": "^0.1.3"
+        "werneckbh/laravel-qr-code": "^0.1.3",
+        "soap/soap": "7.4",
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.2.2",
