--- a/composer.json
+++ b/composer.json
@@ -8,29 +8,31 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.4",
-        "barryvdh/laravel-cors": "0.11.4",
-        "comtele/comtele_sdk": "^1.1.6",
+        "php": "^7.1.3",
+        "ext-soap": "*",
+        "barryvdh/laravel-cors": "^0.11.4",
+        "comtele/comtele_sdk": "^1.1",
         "dompdf/dompdf": "^0.8.3",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0.9",
+        "laravel/framework": "5.7.*",
+        "laravel/tinker": "^1.0",
         "nfephp-org/posprint": "^0.1.3",
         "nfephp-org/sped-cte": "dev-master",
         "nfephp-org/sped-da": "^0.2.3",
         "nfephp-org/sped-mdfe": "dev-master",
-        "nfephp-org/sped-nfe": "^5.0.98",
+        "nfephp-org/sped-nfe": "^5.0",
         "nfephp-org/sped-pos": "dev-master",
-        "simplesoftwareio/simple-qrcode": "^2.0.0",
-        "spatie/laravel-cors": "^1.3.3",
-        "werneckbh/laravel-qr-code": "^0.1.3",
+        "simplesoftwareio/simple-qrcode": "^2.0",
+        "spatie/laravel-cors": "^1.3",
+        "werneckbh/laravel-qr-code": "^0.1.3"
+    },
     "require-dev": {
-        "beyondcode/laravel-dump-server": "^1.2.2",
-        "filp/whoops": "^2.3.1",
-        "fzaninotto/faker": "^1.8.0",
-        "mockery/mockery": "^1.2.1",
-        "nunomaduro/collision": "^2.1.1",
-        "phpunit/phpunit": "^7.5.4"
+        "beyondcode/laravel-dump-server": "^1.0",
+        "filp/whoops": "^2.0",
+        "fzaninotto/faker": "^1.4",
+        "mockery/mockery": "^1.0",
+        "nunomaduro/collision": "^2.0",
+        "phpunit/phpunit": "^7.0"
     },
     "config": {
         "optimize-autoloader": true,
