--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:RGpaF4hVPQgZlzJXlftjsxeGv3kLOmTsN/Yx9bajTiM=
 APP_DEBUG=true
 APP_URL=http://localhost
-PATH_URL=http://127.0.0.1:8000 # URL Path do sistema
+PATH_URL=https://laravel-slym.herokuapp.com/ # URL Path do sistema
 
 LOG_CHANNEL=stack
 
