--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:RGpaF4hVPQgZlzJXlftjsxeGv3kLOmTsN/Yx9bajTiM=
 APP_DEBUG=true
-APP_URL=http://localhost
-PATH_URL=https://laravel-slym.herokuapp.com/ # URL Path do sistema
+APP_URL=https://laravel-slym.herokuapp.com
+PATH_URL=https://laravel-slym.herokuapp.com # URL Path do sistema
 
 LOG_CHANNEL=stack
 
