--- a/.env
+++ b/.env
@@ -4,12 +4,12 @@ APP_ENV=local
 APP_KEY=base64:RGpaF4hVPQgZlzJXlftjsxeGv3kLOmTsN/Yx9bajTiM= 
 APP_DEBUG=true 
 APP_URL=https://laravel-slym.herokuapp.com 
-PATH_URL=http://laravel-slym.herokuapp.com #URL Path do sistema 
+PATH_URL=https://laravel-slym.herokuapp.com #URL Path do sistema 
 
 LOG_CHANNEL=stack 
 
 DB_CONNECTION=mysql 
-DB_HOST=mysql380.umbler.com
+DB_HOST=mysql742.umbler.com
 DB_PORT=41890 
 DB_DATABASE=slym_mario
 DB_USERNAME=slym_mario
