--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ APP_ENV=local
 APP_KEY=base64:RGpaF4hVPQgZlzJXlftjsxeGv3kLOmTsN/Yx9bajTiM= 
 APP_DEBUG=true 
 APP_URL=https://laravel-slym.herokuapp.com 
-PATH_URL=https://laravel-slym.herokuapp.com #URL Path do sistema 
+PATH_URL=http://laravel-slym.herokuapp.com #URL Path do sistema 
 
 LOG_CHANNEL=stack 
 
